@@ -11,14 +11,21 @@ import com.liferay.portal.kernel.json.JSONFactoryUtil;
 import com.liferay.portal.kernel.json.JSONUtil;
 import com.liferay.portal.kernel.model.User;
 import com.liferay.portal.kernel.model.UserConstants;
+import com.liferay.portal.kernel.portlet.LiferayPortletRequest;
 import com.liferay.portal.kernel.resource.bundle.ResourceBundleLoader;
+import com.liferay.portal.kernel.security.permission.PermissionChecker;
+import com.liferay.portal.kernel.security.permission.PermissionThreadLocal;
 import com.liferay.portal.kernel.security.permission.resource.PortletResourcePermission;
 import com.liferay.portal.kernel.service.UserLocalService;
 import com.liferay.portal.kernel.test.util.RandomTestUtil;
+import com.liferay.portal.kernel.theme.ThemeDisplay;
 import com.liferay.portal.kernel.util.Portal;
 import com.liferay.portal.kernel.util.PortalUtil;
+import com.liferay.portal.kernel.util.WebKeys;
 import com.liferay.portal.security.script.management.configuration.helper.ScriptManagementConfigurationHelper;
 import com.liferay.portal.test.rule.LiferayUnitTestRule;
+import com.liferay.portal.workflow.constants.WorkflowDefinitionConstants;
+import com.liferay.portal.workflow.kaleo.designer.web.internal.constants.KaleoDesignerWebKeys;
 import com.liferay.portal.workflow.kaleo.model.KaleoDefinitionVersion;
 import com.liferay.portal.workflow.kaleo.runtime.action.ActionExecutorManager;
 import com.liferay.portal.workflow.kaleo.service.KaleoDefinitionVersionLocalService;
@@ -29,8 +36,8 @@ import jakarta.servlet.http.HttpServletRequest;
 
 import java.text.SimpleDateFormat;
 
-import java.util.Collections;
 import java.util.Date;
+import java.util.List;
 
 import org.junit.Assert;
 import org.junit.Before;
@@ -38,6 +45,7 @@ import org.junit.ClassRule;
 import org.junit.Rule;
 import org.junit.Test;
 
+import org.mockito.MockedStatic;
 import org.mockito.Mockito;
 
 /**
@@ -57,6 +65,22 @@ public class KaleoDesignerDisplayContextTest {
 		_setUpKaleoDefinitionVersion();
 
 		_setUpKaleoDesignerDisplayContext();
+	}
+
+	@Test
+	public void testGetBackURL() {
+		RenderRequest renderRequest = Mockito.mock(RenderRequest.class);
+
+		String redirect = RandomTestUtil.randomString();
+
+		Mockito.when(
+			renderRequest.getParameter("redirect")
+		).thenReturn(
+			redirect
+		);
+
+		Assert.assertEquals(
+			redirect, _kaleoDesignerDisplayContext.getBackURL(renderRequest));
 	}
 
 	@Test
@@ -113,6 +137,18 @@ public class KaleoDesignerDisplayContextTest {
 						_kaleoDefinitionVersion)));
 	}
 
+	@Test
+	public void testIsReadOnly() {
+		_isReadOnly(WorkflowDefinitionConstants.NAME_CHANGE_TONE, true);
+		_isReadOnly(WorkflowDefinitionConstants.NAME_LIFERAY_SEARCH, true);
+		_isReadOnly(
+			WorkflowDefinitionConstants.NAME_FIX_SPELLING_AND_GRAMMAR, true);
+		_isReadOnly(WorkflowDefinitionConstants.NAME_IMPROVE_WRITING, true);
+		_isReadOnly(WorkflowDefinitionConstants.NAME_MAKE_LONGER, true);
+		_isReadOnly(WorkflowDefinitionConstants.NAME_MAKE_SHORTER, true);
+		_isReadOnly(WorkflowDefinitionConstants.NAME_SINGLE_APPROVER, false);
+	}
+
 	private JSONArray _getJSONArray(String expectedCreatorName) {
 		return JSONFactoryUtil.createJSONArray(
 		).put(
@@ -132,6 +168,42 @@ public class KaleoDesignerDisplayContextTest {
 		);
 	}
 
+	private void _isReadOnly(String name, boolean readOnly) {
+		Mockito.when(
+			_kaleoDefinitionVersion.getName()
+		).thenReturn(
+			name
+		);
+
+		Mockito.when(
+			_liferayPortletRequest.getAttribute(
+				KaleoDesignerWebKeys.KALEO_DRAFT_DEFINITION)
+		).thenReturn(
+			_kaleoDefinitionVersion
+		);
+
+		Mockito.when(
+			_portletResourcePermission.contains(
+				Mockito.any(), Mockito.anyLong(), Mockito.any())
+		).thenReturn(
+			Boolean.TRUE
+		);
+
+		try (MockedStatic<PermissionThreadLocal>
+				permissionThreadLocalMockedStatic = Mockito.mockStatic(
+					PermissionThreadLocal.class)) {
+
+			permissionThreadLocalMockedStatic.when(
+				PermissionThreadLocal::getPermissionChecker
+			).thenReturn(
+				Mockito.mock(PermissionChecker.class)
+			);
+
+			Assert.assertEquals(
+				readOnly, _kaleoDesignerDisplayContext.isReadOnly());
+		}
+	}
+
 	private void _setUpKaleoDefinitionVersion() {
 		_createDate = RandomTestUtil.nextDate();
 
@@ -149,11 +221,18 @@ public class KaleoDesignerDisplayContextTest {
 	}
 
 	private void _setUpKaleoDesignerDisplayContext() {
+		RenderRequest renderRequest = Mockito.mock(RenderRequest.class);
+
+		Mockito.when(
+			renderRequest.getAttribute(WebKeys.THEME_DISPLAY)
+		).thenReturn(
+			Mockito.mock(ThemeDisplay.class)
+		);
+
 		_kaleoDesignerDisplayContext = new KaleoDesignerDisplayContext(
-			Mockito.mock(ActionExecutorManager.class),
-			Mockito.mock(RenderRequest.class),
+			Mockito.mock(ActionExecutorManager.class), renderRequest,
 			Mockito.mock(KaleoDefinitionVersionLocalService.class),
-			Mockito.mock(PortletResourcePermission.class),
+			_portletResourcePermission,
 			Mockito.mock(ResourceBundleLoader.class),
 			Mockito.mock(ScriptManagementConfigurationHelper.class),
 			_userLocalService);
@@ -162,7 +241,7 @@ public class KaleoDesignerDisplayContextTest {
 			_kaleoDesignerDisplayContext.getKaleoDefinitionVersions(
 				_kaleoDefinitionVersion)
 		).thenReturn(
-			Collections.singletonList(_kaleoDefinitionVersion)
+			List.of(_kaleoDefinitionVersion)
 		);
 	}
 
@@ -171,12 +250,16 @@ public class KaleoDesignerDisplayContextTest {
 
 		Portal portal = Mockito.mock(Portal.class);
 
-		RenderRequest renderRequest = Mockito.mock(RenderRequest.class);
-
 		Mockito.when(
-			portal.getHttpServletRequest(renderRequest)
+			portal.getHttpServletRequest(Mockito.any())
 		).thenReturn(
 			Mockito.mock(HttpServletRequest.class)
+		);
+
+		Mockito.when(
+			portal.getLiferayPortletRequest(Mockito.any())
+		).thenReturn(
+			_liferayPortletRequest
 		);
 
 		portalUtil.setPortal(portal);
@@ -186,6 +269,10 @@ public class KaleoDesignerDisplayContextTest {
 	private final KaleoDefinitionVersion _kaleoDefinitionVersion = Mockito.mock(
 		KaleoDefinitionVersion.class);
 	private KaleoDesignerDisplayContext _kaleoDesignerDisplayContext;
+	private final LiferayPortletRequest _liferayPortletRequest = Mockito.mock(
+		LiferayPortletRequest.class);
+	private final PortletResourcePermission _portletResourcePermission =
+		Mockito.mock(PortletResourcePermission.class);
 	private final UserLocalService _userLocalService = Mockito.mock(
 		UserLocalService.class);
 
