@@ -5,13 +5,15 @@
 
 package com.liferay.portal.kernel.portlet.render;
 
-import com.liferay.petra.string.StringBundler;
+import com.liferay.petra.io.StreamUtil;
 import com.liferay.petra.string.StringPool;
 import com.liferay.portal.kernel.content.security.policy.ContentSecurityPolicyNonceProviderUtil;
-import com.liferay.portal.kernel.frontend.esm.FrontendESMUtil;
+import com.liferay.portal.kernel.frontend.hashed.files.HashedFilesRegistryUtil;
+import com.liferay.portal.kernel.frontend.hashed.files.HashedFilesUtil;
+import com.liferay.portal.kernel.log.Log;
+import com.liferay.portal.kernel.log.LogFactoryUtil;
 import com.liferay.portal.kernel.model.LayoutTypePortlet;
 import com.liferay.portal.kernel.model.Portlet;
-import com.liferay.portal.kernel.model.Theme;
 import com.liferay.portal.kernel.theme.ThemeDisplay;
 import com.liferay.portal.kernel.util.HashMapBuilder;
 import com.liferay.portal.kernel.util.HtmlUtil;
@@ -31,6 +33,8 @@ import java.io.IOException;
 import java.io.PrintWriter;
 import java.io.Writer;
 
+import java.net.URL;
+
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -39,7 +43,7 @@ import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.function.Predicate;
+import java.util.concurrent.ConcurrentHashMap;
 
 /**
  * @author Iván Zaera Avellón
@@ -189,110 +193,6 @@ public class PortletRenderUtil {
 		return allPortlets;
 	}
 
-	private static List<String> _getComboServletURLs(
-		Collection<PortletResourceAccessor> portletResourceAccessors,
-		Collection<Portlet> portlets, Predicate<String> predicate,
-		long timestamp, String urlPrefix, Set<String> visitedURLs) {
-
-		if (predicate == null) {
-			predicate = s -> true;
-		}
-
-		List<String> urls = new ArrayList<>();
-
-		StringBundler comboServletSB = new StringBundler();
-
-		for (Portlet portlet : portlets) {
-			for (PortletResourceAccessor portletResourceAccessor :
-					portletResourceAccessors) {
-
-				String contextPath = null;
-
-				if (portletResourceAccessor.isPortalResource()) {
-					contextPath = PortalUtil.getPathContext();
-				}
-				else {
-					contextPath =
-						PortalUtil.getPathProxy() + portlet.getContextPath();
-				}
-
-				Collection<String> portletResources =
-					portletResourceAccessor.get(portlet);
-
-				for (String portletResource : portletResources) {
-					if (!predicate.test(portletResource)) {
-						continue;
-					}
-
-					String prefix = null;
-
-					for (String specialPrefix : _specialPrefixes) {
-						if (portletResource.startsWith(specialPrefix)) {
-							portletResource = portletResource.substring(
-								specialPrefix.length());
-
-							prefix = specialPrefix;
-
-							break;
-						}
-					}
-
-					boolean absolute = HttpComponentsUtil.hasProtocol(
-						portletResource);
-
-					if (!absolute) {
-						portletResource = contextPath + portletResource;
-					}
-
-					if (Validator.isNotNull(prefix)) {
-						portletResource = prefix + portletResource;
-					}
-
-					if (visitedURLs.contains(portletResource)) {
-						continue;
-					}
-
-					visitedURLs.add(portletResource);
-
-					if (absolute || Validator.isNotNull(prefix)) {
-						urls.add(portletResource);
-					}
-					else {
-						comboServletSB.append(StringPool.AMPERSAND);
-
-						if (!portletResourceAccessor.isPortalResource()) {
-							comboServletSB.append(portlet.getPortletId());
-							comboServletSB.append(StringPool.COLON);
-						}
-
-						comboServletSB.append(
-							HtmlUtil.escapeURL(portletResource));
-
-						timestamp = Math.max(timestamp, portlet.getTimestamp());
-					}
-				}
-			}
-		}
-
-		if (comboServletSB.length() > 0) {
-			String url = urlPrefix + comboServletSB;
-
-			url = HttpComponentsUtil.addParameter(url, "t", timestamp);
-
-			urls.add(url);
-		}
-
-		return urls;
-	}
-
-	private static String _getMinifierType(URLType urlType) {
-		if (urlType == URLType.CSS) {
-			return "css";
-		}
-
-		return "js";
-	}
-
 	private static PortletRenderParts _getPortletRenderParts(
 		HttpServletRequest httpServletRequest, String portletHTML,
 		Portlet portlet, boolean portletOnLayout) {
@@ -306,19 +206,19 @@ public class PortletRenderUtil {
 			footerCssPaths = _getURLs(
 				httpServletRequest,
 				Arrays.asList(_FOOTER_PORTLET_CSS, _FOOTER_PORTAL_CSS),
-				Arrays.asList(portlet), URLType.CSS);
+				List.of(portlet), URLType.CSS);
 			footerJavaScriptPaths = _getURLs(
 				httpServletRequest,
 				Arrays.asList(_FOOTER_PORTLET_JS, _FOOTER_PORTAL_JS),
-				Arrays.asList(portlet), URLType.JAVASCRIPT);
+				List.of(portlet), URLType.JAVASCRIPT);
 			headerCssPaths = _getURLs(
 				httpServletRequest,
 				Arrays.asList(_HEADER_PORTLET_CSS, _HEADER_PORTAL_CSS),
-				Arrays.asList(portlet), URLType.CSS);
+				List.of(portlet), URLType.CSS);
 			headerJavaScriptPaths = _getURLs(
 				httpServletRequest,
 				Arrays.asList(_HEADER_PORTLET_JS, _HEADER_PORTAL_JS),
-				Arrays.asList(portlet), URLType.JAVASCRIPT);
+				List.of(portlet), URLType.JAVASCRIPT);
 		}
 
 		return new PortletRenderParts(
@@ -336,10 +236,51 @@ public class PortletRenderUtil {
 		return rootPortlet.getPortletId();
 	}
 
+	private static String _getStaticCSSResourceURL(
+		HttpServletRequest httpServletRequest, String originalURL,
+		ThemeDisplay themeDisplay) {
+
+		String url = null;
+
+		String proxyPath = PortalUtil.getPathProxy();
+
+		String unhashedFileURI = originalURL.substring(proxyPath.length());
+
+		String hashedFileURI = HashedFilesRegistryUtil.getHashedFileURI(
+			unhashedFileURI);
+
+		if (hashedFileURI == null) {
+			url = originalURL;
+
+			if (PortalUtil.isRightToLeft(httpServletRequest)) {
+				int i = url.lastIndexOf(StringPool.PERIOD);
+
+				if (i != -1) {
+					url = url.substring(0, i) + "_rtl" + url.substring(i);
+				}
+			}
+		}
+		else {
+			url = proxyPath + hashedFileURI;
+
+			if (PortalUtil.isRightToLeft(httpServletRequest)) {
+				url = HashedFilesUtil.addNameSuffix(url, "_rtl");
+			}
+		}
+
+		if (_isTokenized(unhashedFileURI)) {
+			url = HttpComponentsUtil.addParameter(
+				url, "themeId", themeDisplay.getThemeId());
+		}
+
+		return url;
+	}
+
 	private static List<String> _getStaticURLs(
 		HttpServletRequest httpServletRequest,
 		Collection<PortletResourceAccessor> portletResourceAccessors,
-		Collection<Portlet> portlets, Set<String> visitedURLs) {
+		Collection<Portlet> portlets, URLType urlType,
+		Set<String> visitedURLs) {
 
 		List<String> urls = new ArrayList<>();
 
@@ -348,8 +289,6 @@ public class PortletRenderUtil {
 				WebKeys.THEME_DISPLAY);
 
 		for (Portlet portlet : portlets) {
-			Portlet rootPortlet = portlet.getRootPortlet();
-
 			for (PortletResourceAccessor portletResourceAccessor :
 					portletResourceAccessors) {
 
@@ -381,9 +320,26 @@ public class PortletRenderUtil {
 					}
 
 					if (!HttpComponentsUtil.hasProtocol(portletResource)) {
-						portletResource = PortalUtil.getStaticResourceURL(
-							httpServletRequest, contextPath + portletResource,
-							rootPortlet.getTimestamp());
+						if (urlType == URLType.CSS) {
+							portletResource = _getStaticCSSResourceURL(
+								httpServletRequest,
+								contextPath + portletResource, themeDisplay);
+						}
+						else if (urlType == URLType.JAVASCRIPT) {
+							portletResource = contextPath + portletResource;
+
+							String hashedFileURI =
+								HashedFilesRegistryUtil.getHashedFileURI(
+									portletResource);
+
+							if (hashedFileURI != null) {
+								portletResource = hashedFileURI;
+							}
+						}
+						else {
+							throw new UnsupportedOperationException(
+								"Unsupported URL type " + urlType);
+						}
 					}
 
 					if (!portletResource.contains(Http.PROTOCOL_DELIMITER)) {
@@ -415,26 +371,6 @@ public class PortletRenderUtil {
 		Collection<PortletResourceAccessor> portletResourceAccessors,
 		Collection<Portlet> portlets, URLType urlType) {
 
-		boolean fastLoad;
-		Predicate<String> predicate = null;
-
-		ThemeDisplay themeDisplay =
-			(ThemeDisplay)httpServletRequest.getAttribute(
-				WebKeys.THEME_DISPLAY);
-
-		if (urlType == URLType.CSS) {
-			fastLoad = themeDisplay.isThemeCssFastLoad();
-		}
-		else if (urlType == URLType.JAVASCRIPT) {
-			fastLoad = themeDisplay.isThemeJsFastLoad();
-
-			predicate = resource -> !themeDisplay.isIncludedJs(resource);
-		}
-		else {
-			throw new UnsupportedOperationException(
-				"Unsupported URL type " + urlType);
-		}
-
 		Set<String> visitedURLs = (Set<String>)httpServletRequest.getAttribute(
 			WebKeys.PORTLET_RESOURCE_STATIC_URLS);
 
@@ -445,28 +381,16 @@ public class PortletRenderUtil {
 				WebKeys.PORTLET_RESOURCE_STATIC_URLS, visitedURLs);
 		}
 
-		List<String> urls = null;
+		List<String> urls;
 
-		if (fastLoad) {
-			Theme theme = themeDisplay.getTheme();
-
-			urls = _getComboServletURLs(
-				portletResourceAccessors, portlets, predicate,
-				theme.getTimestamp(),
-				PortalUtil.getStaticResourceURL(
-					httpServletRequest,
-					themeDisplay.getCDNDynamicResourcesHost() +
-						themeDisplay.getPathContext() + "/combo",
-					StringBundler.concat(
-						"minifierType=", _getMinifierType(urlType), "&themeId=",
-						themeDisplay.getThemeId()),
-					-1),
+		if ((urlType == URLType.CSS) || (urlType == URLType.JAVASCRIPT)) {
+			urls = _getStaticURLs(
+				httpServletRequest, portletResourceAccessors, portlets, urlType,
 				visitedURLs);
 		}
 		else {
-			urls = _getStaticURLs(
-				httpServletRequest, portletResourceAccessors, portlets,
-				visitedURLs);
+			throw new UnsupportedOperationException(
+				"Unsupported URL type " + urlType);
 		}
 
 		for (int i = 0; i < urls.size(); i++) {
@@ -478,6 +402,38 @@ public class PortletRenderUtil {
 		}
 
 		return urls;
+	}
+
+	private static boolean _isTokenized(String resourceURI) {
+		if (!_tokenized.containsKey(resourceURI)) {
+			URL resourceURL = HashedFilesRegistryUtil.getResource(resourceURI);
+
+			String content = null;
+
+			try {
+				content = StreamUtil.toString(resourceURL.openStream());
+			}
+			catch (Exception exception) {
+				if (_log.isDebugEnabled()) {
+					_log.debug(
+						"Assuming " + resourceURI +
+							" has no tokens because it could not be read",
+						exception);
+				}
+
+				_tokenized.putIfAbsent(resourceURI, false);
+
+				return false;
+			}
+
+			_tokenized.putIfAbsent(
+				resourceURI,
+				content.contains("@base_url@") ||
+				content.contains("@portal_ctx@") ||
+				content.contains("@theme_image_path@"));
+		}
+
+		return _tokenized.get(resourceURI);
 	}
 
 	private static void _writeCSSPath(
@@ -512,7 +468,7 @@ public class PortletRenderUtil {
 
 		if (javaScriptPath.startsWith("module:")) {
 			javaScriptPath = javaScriptPath.substring(7);
-			type = FrontendESMUtil.getScriptType();
+			type = "module";
 		}
 
 		printWriter.print("<script");
@@ -639,8 +595,13 @@ public class PortletRenderUtil {
 
 		};
 
+	private static final Log _log = LogFactoryUtil.getLog(
+		PortletRenderUtil.class);
+
 	private static final Set<String> _specialPrefixes = SetUtil.fromArray(
 		"module:", "nocombo:");
+	private static final Map<String, Boolean> _tokenized =
+		new ConcurrentHashMap<>();
 
 	private enum URLType {
 
